<resources>
    <string name="app_name">My Application</string>
    <string name="hihi">HIHI</string>
    <string name="red">Red</string>
    <string name="notRed">Not Red</string>
    <string name="yellow">Yellow</string>
    <string name="notYellow">Not Yellow</string>
    <string name="blue">Blue</string>
    <string name="notBlue">Not Blue</string>
    <string name="thatNgoc">THẬT NGỐC</string>
    <string name="linearRelativeTableLayout">LinearLayout - RelativeLayout - TableLayout</string>
    <string name="btUI">Bai Tap UI</string>
    <string name="white">White</string>
    <string name="setColor">Set Color</string>
    <string name="clear">Clear</string>
    <string name="button5">Button 5</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="color1">Color1</string>
    <string name="color2">Color2</string>
    <string name="color3">Color3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rotations_and_app_restarts">Rotations and App Restarts</string>
    <string name="add_message">Add Message</string>
    <string name="play_song">Play song</string>
    <string name="stop_song">Stop Song</string>
    <string name="notification">Notification</string>
    <string name="ten_cong_viec">Tên công việc</string>
    <string name="thoi_gian">Thời gian</string>
    <string name="add_work">Add Work</string>
    <string name="danh_sach_cong_viec">Danh sách công việc</string>
    <string name="number_of_line_in_page">Number of line in page</string>
    <string name="amount">Amount</string>
    <string name="rate">Rate</string>
    <string name="months">Months</string>
    <string name="amount_200000">200000</string>
    <string name="rate_6_5">6.5</string>
    <string name="month_180">180</string>
    <string name="rate_8">8</string>
    <string name="months_120">120</string>
</resources>
