<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExTraining.activity.ExUiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/imgbtn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_red"></ImageButton>

        <ImageButton
            android:id="@+id/imgbtn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_blue"></ImageButton>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hihi"
        android:textSize="@dimen/textSize"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/tgbtn_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/notRed"
            android:textOn="@string/red"></ToggleButton>

        <ToggleButton
            android:id="@+id/tgbtn_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/notYellow"
            android:textOn="@string/yellow"></ToggleButton>

        <ToggleButton
            android:id="@+id/tgbtn_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/notBlue"
            android:textOn="@string/blue"></ToggleButton>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thatNgoc"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize"></TextView>


</LinearLayout>