<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExTraining.activity.RelativeActivity">

    <Button
        android:id="@+id/bt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:text="@string/button5"></Button>

    <Button
        android:id="@+id/bt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_5"
        android:layout_alignLeft="@+id/bt_5"
        android:layout_marginLeft="@dimen/marginLeftNegative50"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/button3"></Button>

    <Button
        android:id="@+id/bt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_5"
        android:layout_alignLeft="@+id/bt_5"
        android:layout_marginLeft="@dimen/marginLeft50"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/button4"></Button>

    <Button
        android:id="@+id/bt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_3"
        android:layout_alignLeft="@+id/bt_3"
        android:layout_marginLeft="@dimen/marginLeftNegative50"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/button1"></Button>

    <Button
        android:id="@+id/bt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_4"
        android:layout_alignLeft="@+id/bt_4"
        android:layout_marginLeft="@dimen/marginLeft50"
        android:layout_marginBottom="@dimen/marginBottom"
        android:text="@string/button2"></Button>
</RelativeLayout>