<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:stretchColumns="3"
    tools:context=".ExTraining.activity.fragment.TableFragment">

    <TableRow>

        <Button
            android:layout_column="1"
            android:background="@color/vangNhat"
            android:text="@string/color1"
            android:textAllCaps="false"
            android:textColor="@color/doSam"></Button>

        <Button
            android:layout_column="2"
            android:background="@color/xanhNhat"
            android:text="@string/color2"
            android:textAllCaps="false"
            android:textColor="@color/camSam"></Button>

        <Button
            android:layout_column="3"
            android:background="@color/timNhat"
            android:text="@string/color3"
            android:textAllCaps="false"
            android:textColor="@color/xanhDuong"></Button>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="@dimen/height50"
            android:layout_column="1"
            android:layout_span="3"
            android:background="@color/vangDam"></TextView>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="@dimen/height50"
            android:layout_column="3"
            android:layout_span="1"
            android:background="@color/xam"
            android:gravity="center"
            android:text="@string/clear"></TextView>
    </TableRow>

</TableLayout>