<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExTraining.activity.fragment.PlaySongFragment">

    <Button
        android:id="@+id/bt_play_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_song"></Button>

    <Button
        android:id="@+id/bt_stop_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_song"></Button>

    <Button
        android:id="@+id/bt_Notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"></Button>

    <fragment
        android:id="@+id/fragment_work"
        class="com.example.myapplication.ExTraining.activity.fragment.AddWorkFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </fragment>

</LinearLayout>