<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ExTraining.activity.fragment.AddWorkFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_cong_viec"></TextView>

        <EditText
            android:id="@+id/et_nameWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thoi_gian"></TextView>

        <EditText
            android:id="@+id/et_timeWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_addWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_work"></Button>

            <Button
                android:id="@+id/bt_allWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/danh_sach_cong_viec"></Button>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fm_allwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>
</ScrollView>