<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExTraining.activity.fragment.LoanFragment"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/textSize"
            android:text=""
            android:id="@+id/tv_tv_monthly_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1.0">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/amount"
                        android:id="@+id/tv_amount1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_amount1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/rate"
                        android:id="@+id/tv_rate1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_rate1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/months"
                        android:id="@+id/tv_months1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_months1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/amount"
                        android:id="@+id/tv_amount2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_amount2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/rate"
                        android:id="@+id/tv_rate2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_rate2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/months"
                        android:id="@+id/tv_months2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >
                    </TextView>
                    <EditText
                        android:id="@+id/et_months2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>